# multidb

./: .dockerignore  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.prebuilt  Dockerfile.smoke  LICENSE  LICENSE-APACHE  README.md  RELEASE.md  SECURITY.md  deny.toml  docker-compose.yml
.cargo/: audit.toml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  nightly-verification.yml  release.yml
baselines/perf/: ci-gate.json  local-smoke.json  release-baseline.json
benches/: columnar_aggregation.rs  performance_micro.rs
docs/: adr-phase-23-compute-storage-boundary.md  docker.md  ga-support-matrix.md  phase-0-42-ga-support-matrix.md  phase-13-distributed-transaction-recovery.md  phase-14-ops-ga.md  phase-22-ecosystem.md  phase-23-cloud.md  phase-25-canonical-format.md  phase-26-transaction-core.md  phase-27-cryptography-audit.md  phase-29-multi-model-consistency.md  phase-30-production-ready.md  phase-31-production-ready.md  phase-33-production-ready.md  phase-35-roadmap-baseline.md  phase-36-configuration-spec.md  phase-41-production-ready.md  phase-42-production-ready.md  phase-43-production-ready.md  phase-45-production-ready.md  phase-46-production-ready.md  phase-48-production-ready.md  phase-49-production-ready.md  phase-52-production-ready.md  phase-53-production-ready.md  public-preview.md  quality-and-performance.md  release-and-versioning.md  release-checklist.md  sdk-api-ecosystem.md  sdk-generated-clients.md  sdk-templates.md  source-baseline.md  spring-jpa-compatibility.md  support-matrix.md
docs/history/: adr-phase-22-ecosystem-boundaries.md  phase-0-42-support-matrix.md  phase-24-hardening.md  phase-32-production-ready.md  phase-34-production-ready.md  phase-35-roadmap-baseline.md  phase-37-production-ready.md  phase-38-production-ready.md  phase-39-production-ready.md  phase-40-production-ready.md  phase-44-production-ready.md  phase-45-production-ready.md  phase-47-production-ready.md  phase-50-production-ready.md  phase-51-production-ready.md  phase-53-production-ready.md
docs/openapi/: control-plane-v1.openapi.json
docs/schemas/: database-spec-v1.schema.json
examples/ai-memory/: README.md  multidb.yaml  seed.json
examples/analytics/: README.md  multidb.yaml  seed.json  smoke.ps1
examples/desktop-embedded/: README.md  multidb.yaml  seed.json
examples/game-save/: README.md  multidb.yaml  seed.json
examples/sdk/go/: go.mod  main.go
examples/sdk/python/: example.py
examples/sdk/rust/: Cargo.toml
examples/sdk/rust/src/: main.rs
examples/sdk/typescript/: index.mjs  package-lock.json  package.json
examples/secure-saas/: README.md  multidb.yaml  seed.json
fuzz/: Cargo.toml
fuzz/fuzz_targets/: backup_manifest.rs  bson_document.rs  commit_log_record.rs  compressed_value.rs  internal_request_frame.rs  keyenc_successor.rs  pg_copy_text.rs  sql_parser.rs  value_decode.rs
ops/helm/multidb/: Chart.yaml  values.yaml
ops/helm/multidb/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  pvc.yaml  service.yaml
ops/kind/: multidb-kind.yaml
ops/minio/: backup-target.env.example
ops/vault/: dev-policy.hcl
scripts/: check.ps1  cluster-ga-smoke.ps1  cluster-smoke.ps1  docker-smoke.ps1  fuzz-smoke.ps1  license-deny-smoke.ps1  miri-smoke.ps1  ops-smoke.ps1  perf.ps1  perf_gate.ps1  perf_trend.ps1  phase53-ga-smoke.ps1  preview-smoke.ps1  release-smoke.ps1  sdk-examples-smoke.ps1  sdk-smoke.ps1  studio-check.ps1  templates-smoke.ps1  tsan-smoke.ps1  upgrade-smoke.ps1
sdk/go/: README.md  client.go  client_test.go  go.mod
sdk/python/: README.md  pyproject.toml
sdk/python/src/multidb_client/: __init__.py
sdk/python/tests/: test_client.py
sdk/rust/: Cargo.toml  README.md
sdk/rust/src/: lib.rs
sdk/typescript/: README.md  package-lock.json  package.json  tsconfig.json
sdk/typescript/src/: index.ts
sdk/typescript/test/: client.test.mjs
src/: admin.rs  autoscale.rs  backup.rs  cdc.rs  cloud.rs  compat.rs  config_spec.rs  continuous.rs  extension.rs  federation.rs  fileio.rs  geo.rs  graph.rs  hardening.rs  internal_transport.rs  keyenc.rs  lib.rs  migration.rs  observability.rs  performance.rs  phase30.rs  roadmap.rs  runtime_advisor.rs  security.rs  templates.rs  temporal.rs  text.rs  timeseries.rs  tuning.rs  verification.rs
src/config_spec/: schema.rs
src/db/: mod.rs  runtime.rs  tests.rs
src/model/: mod.rs
src/network/: mod.rs
src/query/: mod.rs  optimizer.rs  parser.rs  tests.rs
src/repl/: ap.rs  cp.rs  cp_live.rs  dist_txn.rs  healing.rs  mod.rs  shard.rs
src/storage/: any.rs  compressed.rs  conformance.rs  encrypted.rs  error.rs  memory.rs  mod.rs  redb.rs  sim.rs  traits.rs
src/txn/: mod.rs
src/vector/: mod.rs
studio/: eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
studio/src/: App.test.tsx  App.tsx  api.test.ts  api.ts  main.tsx  styles.css  types.ts
studio/src/test/: fixtures.ts
studio/tests/e2e/: studio.spec.ts
supply-chain/: config.toml
