[package]
name = "multidb"
version = "0.1.0"
edition = "2024"
rust-version = "1.89"
license = "MIT OR Apache-2.0"
description = "Experimental multi-model database engine with Rust core, Control Plane API, Studio UI and SDKs."
repository = "https://github.com/multidb/multidb"
homepage = "https://github.com/multidb/multidb"
documentation = "https://github.com/multidb/multidb/tree/main/docs"
readme = "README.md"
keywords = ["database", "multimodel", "rust", "storage", "vector"]
categories = ["database-implementations", "command-line-utilities"]
publish = false
exclude = [
    "/.claude-flow",
    "/.idea",
    "/.swarm",
    "/agentdb.rvf",
    "/agentdb.rvf.lock",
    "/examples/sdk/rust/target",
    "/examples/sdk/typescript/node_modules",
    "/fuzz/target",
    "/plan",
    "/ruvector.db",
    "/sdk/python/build",
    "/sdk/python/dist",
    "/sdk/python/src/*.egg-info",
    "/sdk/python/**/__pycache__",
    "/sdk/rust/target",
    "/sdk/typescript/dist",
    "/sdk/typescript/node_modules",
    "/studio/dist",
    "/studio/node_modules",
    "/studio/playwright-report",
    "/studio/test-results",
    "/studio/tsconfig.tsbuildinfo",
    "/target",
    "*.log",
    "*.pdb",
    "*.pyc",
]

[features]
default = []
cloud-object-store = []
insecure-transport = []

[dependencies]
thiserror = "2.0.18"
redb = "4.1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
postcard = { version = "1.1.3", default-features = false, features = ["alloc"] }
uuid = { version = "1", features = ["v7"] }
datafusion = { version = "54.0.0", default-features = false, features = ["sql"] }
parquet = "58.3.0"
bytes = "1"
sqlparser = "0.62.0"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "net", "io-util", "sync", "time"] }
async-trait = "0.1.89"
hnsw_rs = "0.3.4"
pgwire = { version = "0.36.3", default-features = false, features = ["server-api-ring"] }
tokio-rustls = "0.26.4"
rustls-pki-types = "1.15.0"
futures = "0.3"
openraft = { version = "0.10.0-alpha.27", default-features = false, features = ["serde", "tokio-rt"] }
blake3 = "1.8.5"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
chacha20poly1305 = "0.11.0"
getrandom = "0.3.4"
rand_core = "0.10.1"
zeroize = "1.9.0"
moka = { version = "0.12.11", features = ["sync"] }
lz4_flex = "0.13.1"
zstd = "0.13.3"
rayon = "1.10.0"
crc32fast = "1.4.2"
wasmtime = { version = "36.0.8", default-features = false, features = ["runtime", "cranelift", "std"] }
bson = "3.1.0"
axum = "0.8.9"
object_store = { version = "0.13.2", default-features = false, features = ["fs"] }
url = "2"
tokio-postgres = "0.7.18"
argon2 = "0.5.3"
time = { version = "0.3.44", features = ["formatting"] }

[dev-dependencies]
tempfile = "3"
criterion = "0.8.2"
tokio-postgres-rustls = "0.14.0"
rcgen = "0.14.8"
proptest = "1.11.0"
wat = "1"
sqllogictest = "0.29.1"
stateright = "0.31.0"
tower = "0.5"

[profile.test]
# Avoid intermittent MSVC LNK1318 PDB failures when linking the large lib test binary.
debug = 0

[[bench]]
name = "columnar_aggregation"
harness = false

[[bench]]
name = "performance_micro"
harness = false
