[package]
name = "multidb-fuzz"
version = "0.0.0"
edition = "2024"
publish = false

[package.metadata]
cargo-fuzz = true

[dependencies]
bson = "3.1.0"
libfuzzer-sys = "0.4"
multidb = { path = ".." }
postcard = { version = "1.1.3", default-features = false, features = ["alloc"] }
serde_json = "1"

[[bin]]
name = "sql_parser"
path = "fuzz_targets/sql_parser.rs"
test = false
doc = false

[[bin]]
name = "value_decode"
path = "fuzz_targets/value_decode.rs"
test = false
doc = false

[[bin]]
name = "backup_manifest"
path = "fuzz_targets/backup_manifest.rs"
test = false
doc = false

[[bin]]
name = "commit_log_record"
path = "fuzz_targets/commit_log_record.rs"
test = false
doc = false

[[bin]]
name = "bson_document"
path = "fuzz_targets/bson_document.rs"
test = false
doc = false

[[bin]]
name = "compressed_value"
path = "fuzz_targets/compressed_value.rs"
test = false
doc = false

[[bin]]
name = "pg_copy_text"
path = "fuzz_targets/pg_copy_text.rs"
test = false
doc = false

[[bin]]
name = "keyenc_successor"
path = "fuzz_targets/keyenc_successor.rs"
test = false
doc = false

[[bin]]
name = "internal_request_frame"
path = "fuzz_targets/internal_request_frame.rs"
test = false
doc = false
